--- a/_posts/2023-05-17-post-2.markdown
+++ b/_posts/2023-05-17-post-2.markdown
@@ -5,3 +5,5 @@ date:   2023-05-17 23:37:00 -0300
 categories: coursera devops devsecops
 ---
 A **second** post was created,
+
+I'm going to create a [link](http://www.coursera.org), it should be valid and pass the github action.
