invalid URL added

--- a/_posts/2023-05-17-post-3.markdown
+++ b/_posts/2023-05-17-post-3.markdown
@@ -7,3 +7,5 @@ categories: coursera devops devsecops
 A third post was created.
 
 How audacious.
+
+And here I'm going to write an invalid URL, check this out: http://this.is.an.error
